# llm-agent

./: .gitignore  ARCHITECTURE.md  BACKLOG.md  README.md  canvas.ipynb  pyproject.toml  report.md
src/agents/feature_formulator/: crew.py  main.py
src/agents/feature_formulator/config/: agents.yaml  tasks.yaml
src/agents/tool_evaluator/: crew.py  main.py
src/agents/tool_evaluator/config/: agents.yaml  tasks.yaml
src/agents/tool_evaluator/tools/: __init__.py  scraping_fish_tool.py
src/helpers/: __init__.py  file_utils.py  llm_wrapper.py  logger.py  tracer.py
src/services/vector_store/: __init__.py  service.py  tool.py
src/services/zapi/: __init__.py  models.py  service.py
src/tests/: test_helpers_tracer.py  test_llm_wrapper.py
src/tool_evaluator_agent/: crew.py  main.py
src/tool_evaluator_agent/config/: agents.yaml  tasks.yaml
src/tool_evaluator_agent/tools/: scraping_fish_tool.py
