[tool.poetry]
name = "tool-evaluator-agent"
version = "0.1.0"
description = "Tool Evaluator Agent using crewAI"
authors = ["Alejandro Olchik <alejandro@orulo.com.br>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = "^0.51.0" }
langtrace-python-sdk = "^2.2.20"
agentops = "^0.3.9"
langchain-google-genai = "^1.0.9"

[tool.poetry.scripts]
agent = "tool_evaluator_agent.main:run"
train = "tool_evaluator_agent.main:train"
replay = "tool_evaluator_agent.main:replay"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-v --cov=src --cov-report=term-missing --cov-config=.coveragerc"
testpaths = [
  "src/tests"
]

[tool.flake8]
max-line-length = 88
extend-ignore = "E203"