[tool.poetry]
name = "llm-agent"
version = "0.1.1"
description = "LLM Agents Using crewAI"
authors = ["Alejandro Olchik <alejandro@orulo.com.br>"]
packages = [ 
  { include="agents", from="src" }
]


[tool.poetry.dependencies]
python = ">=3.10,<3.13"
crewai = { extras = ["tools"], version = "^0.51.0" }
langtrace-python-sdk = "^2.2.20"
langchain-google-genai = "^1.0.9"
trulens = "^1.0.1"
trulens-apps-langchain = "^1.0.1"
trulens-providers-openai = "^1.0.1"
ipytree = "^0.2.2"
trulens-providers-bedrock = "^1.0.1"
python-dotenv = "^1.0.1"
pyyaml = "^6.0.2"
composio-crewai = "^0.5.25"
pinecone = "^5.3.1"
langchain-pinecone = "0.1.3"

[tool.poetry.scripts]
tool_evaluator = "agents.tool_evaluator.main:run"
tool_evaluator_train = "agents.tool_evaluator.main:train"
tool_evaluator_replay = "agents.tool_evaluator.main:replay"
tool_evaluator_test = "agents.tool_evaluator.main:test"
feature_formulator = "agents.feature_formulator.main:run"
zapi_listener = "services.zapi.service:run"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-v --cov=src --cov-report=term-missing --cov-config=.coveragerc"
testpaths = [
  "src/tests"
]

[tool.flake8]
max-line-length = 88
extend-ignore = "E203"